face counts are rendering more than 2000% faster than before.

Also included in this release is the development of a new "shp-g"
geometry importer for Shapefile data.  Shapefiles are a common file
format for storing geospatial vector data commonly used by geographic
information systems (GIS) software.  Shapefiles may be imported as 2D
sketch geometry that can be extruded to a 3D representation.

* support matrices over halfspaces within combinations - Sean Morrison
* fixed archer and rtwizard startup failure bug on Mac - Sean Morrison
* fixed bug starting up the Combination Editor in mged - Sean Morrison
* mged 'mater' command interactive prompting restored - Sean Morrison
* fixed bug running nirt on a Windows command terminal - Bob Parker
* improved wireframe updating when editing within mged - Sean Morrison
* added -T bot_mintie BoT optimization options to nirt - Sean Morrison
* mged command-click zoom binding for one button mice - Sean Morrison
* removed 'txyz-pl' utility tool in favor of 'xyz-pl' - Sean Morrison
* new shp-g importer for Esri Shapefile geometry files - Sean Morrison
* new 'rt_bot_mintie' option for triggering TIE BoTs  - Erik Greenwald
* integrated optimized TIE BoT raytracing with LIBRT - Erik Greenwald


----------------------------------------------------------------------
--- 2011-02-09  Release 7.18.2                                     ---
----------------------------------------------------------------------

This release provides initial support for reading some older
(platform-dependent) v4 geometry database files regardless of their
originating platform.  Binary-incompatible v4 geometry database files
can be opened read-only within MGED where geometry can be inspected,
drawn, exported via the "keep" command, and updated to the newer
(platform-independent) v5 geometry database file format via the
"dbupgrade" command.  In order to override the otherwise automatic
binary-incomaptible v4 detection, MGED's "opendb" command provides a