@@ -426,6 +426,11 @@ nicknames joevalleyfield
 2007 April
 U.S. Army Research Laboratory
 
+Li, Dongxu
+nicknames dongxu_li dli
+2007 April
+Open Source
+
 Poole, Ben
 nicknames poolio
 2007 June
@@ -643,11 +648,6 @@ nicknames jpjacobs
 Open Source
 
 Fiedler, Stefan
-Open Source
-
-Li, Dongxu
-nicknames dongxu_li dli
-2007 April
 Open Source
 
 Chang, Loui
