@@ -33,6 +33,8 @@ format for storing geospatial vector data commonly used by geographic
 information systems (GIS) software.  Shapefiles may be imported as 2D
 sketch geometry that can be extruded to a 3D representation.
 
+* support for applying matrix edits to revolve primitives - Dongxu Li
+* fixed mged 'red' command bug on Windows - Sean Morrison, Cliff Yapp
 * support matrices over halfspaces within combinations - Sean Morrison
 * fixed archer and rtwizard startup failure bug on Mac - Sean Morrison
 * fixed bug starting up the Combination Editor in mged - Sean Morrison
